test/tests/errors/error-for-not-location2.sm
// true
// false
/**/
/**/

program {
    const x = 0;
    for (x = 0 while false) {}
}